src/objects/Dettaglio_Ordini__c.object
<CustomObject>
    <fields>
        <fullName>Canale__c</fullName>
        <label>Canale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
                <value>
                    <fullName>c</fullName>
                </value>
                <value>
                    <fullName>d</fullName>
                </value>
                <value>
                    <fullName>e</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_HK__c</fullName>
        <label>Cliente HK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Carta_HK__c</fullName>
        <label>Codice Carta HK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Magazzino__c</fullName>
        <label>Codice Magazzino</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Creazione__c</fullName>
        <label>Data Creazione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Spedizione__c</fullName>
        <label>Data Spedizione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Ultima_Modifica__c</fullName>
        <label>Data Ultima Modifica</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flag_Anonimo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag Anonimo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Transfer__c</fullName>
        <label>Flag Transfer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fonte_Cliente__c</fullName>
        <label>Fonte Cliente</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metodo_Pagamento__c</fullName>
        <label>Metodo Pagamento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>q</fullName>
                </value>
                <value>
                    <fullName>w</fullName>
                </value>
                <value>
                    <fullName>r</fullName>
                </value>
                <value>
                    <fullName>t</fullName>
                </value>
                <value>
                    <fullName>y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metodo_Spedizione__c</fullName>
        <label>Metodo Spedizione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>p</fullName>
                </value>
                <value>
                    <fullName>o</fullName>
                </value>
                <value>
                    <fullName>l</fullName>
                </value>
                <value>
                    <fullName>k</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numero_Ordine__c</fullName>
        <label>Numero Ordine</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ordine_Online_HK__c</fullName>
        <label>Ordine Online HK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prezzo_Base_Prodotto__c</fullName>
        <label>Prezzo Base Prodotto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prezzo_Scontato_Riga__c</fullName>
        <label>Prezzo Scontato Riga</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prodotto_HK__c</fullName>
        <label>Prodotto HK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantita__c</fullName>
        <label>Quantita</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <label>RMA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Riga_Ordine_HK__c</fullName>
        <label>Riga Ordine HK</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Riga_Ordine__c</fullName>
        <label>Riga Ordine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Righe_Online_HK__c</fullName>
        <label>Righe Online HK</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sconto_Promo__c</fullName>
        <label>Sconto Promo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Stato_Ordine__c</fullName>
        <label>Stato Ordine</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stato_Riga__c</fullName>
        <label>Stato Riga</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Dettaglio Ordini</label>
    <nameField>
        <label>Dettaglio Ordini Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dettaglio Ordoinii</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>